<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".MainActivity"
android:background="@drawable/gradient_background">


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:padding="10dp"
    >

    <EditText
        android:id="@+id/EditTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/edittext_login_text"
        android:textColorHint="#cccccc"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="5dp"
        android:background="@drawable/edittext_top"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/edittext_password_text"
        android:textColorHint="#cccccc"
        android:password="true"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:background="@drawable/edittext_bottom"
        />
    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:text="@string/button_login_text"
        android:background="@drawable/button_login"
        android:onClick="login"


        />
</LinearLayout>


</RelativeLayout>



