<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp" >



    <RelativeLayout
        android:id="@+id/layout_item_visit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/layout_title_visit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_title_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_visit"
                android:textColor="#1A28EC"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_title_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_date_visit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_title_visit"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_date_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_visit"
                android:textColor="#E99C18"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_date_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_hour_visit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_date_visit"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_hour_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hour_visit"
                android:textColor="#7F3ED0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_hour_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="normal" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>